Quick Fix offers cards visibility

--- a/src/App.css
+++ b/src/App.css
@@ -173,6 +173,7 @@
 .blueGradientText {
   background: linear-gradient(0deg, #209de0, #86E5FF);
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
   font-family: Arial, Helvetica, sans-serif;
 }
